fixed videos on ios devices

--- a/src/App.css
+++ b/src/App.css
@@ -30,14 +30,12 @@ svg {
   padding-right: 0.5rem;
 }
 
-video, 
-img {
+video {
   width: 100%;
 }
 
 @media only screen and (min-width: 37.5em) {
-  video, 
-  img {
+  video {
     border-radius: 0.375rem 0.375rem 0 0;
     width: 100%;
   }
@@ -99,7 +97,7 @@ img {
 .card {
   width: 100%;
   margin: 2rem 0;
-  /* box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2); */
+  box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);
   background: white;
 }
 
